# DeGenPrime

./: .gitignore  DataNode.cpp  DataNode.h  DataSequence.cpp  DataSequence.h  DeGenPrime  DeGenPrime.cpp  LICENSE  Primer.cpp  Primer.h  PrimerCalculator.cpp  PrimerCalculator.h  PrimerPair.cpp  PrimerPair.h  PrimerPairList.cpp  PrimerPairList.h  README.md  SETTINGS.csv  Sequence.cpp  Sequence.h  SequenceList.cpp  SequenceList.h  SequenceReader.cpp  SequenceReader.h  SinNombreL.fna  frontend.py  global.h  local.clust  pseudocode.txt  single_local.clust  testcase.py
16May2023/: DataNode.cpp  DataNode.h  DataSequence.cpp  DeGenPrime.cpp  GlobalSettings.cpp  GlobalSettings.h  PrimerCalculator.cpp  PrimerPair.cpp  PrimerPair.h  Sequence.h  SequenceList.cpp  SequenceList.h  SequenceReader.cpp  SettingsReader.h  global.h
18Apr2023/: DataNode.cpp  DataSequence.cpp  DataSequence.h  DeGenPrime.cpp  Primer.cpp  Primer.h  PrimerCalculator.cpp  PrimerCalculator.h  PrimerPairList.h  Sequence.cpp  SequenceList.cpp  SequenceList.h  SequenceReader.cpp  SequenceReader.h  global.h
data/: 16s_test_data_local.fas  SinNombreL.dgp  SinNombreL.fna  anfD.bould  anfD.faa  anfD.faf  anfD.p3  anfD_l.clust  anfD_l.dgp  anfD_seeds_UPDATED.faa  anfK.bould  anfK.faa  anfK.p3  anfK_l.clust  anfK_l.dgp  anfK_seeds_UPDATED.faa  g23.fna  g23_l.clust  g23_l.dgp  nifD.bould  (+25 more)
src/: CMakeLists.txt  DataNode.cpp  DataNode.h  DataSequence.cpp  DataSequence.h  DeGenPrime  DeGenPrime copy.cpp  DeGenPrime.cpp  GlobalSettings.cpp  GlobalSettings.h  Primer.cpp  Primer.h  PrimerCalculator.cpp  PrimerCalculator.h  PrimerPair.cpp  PrimerPair.h  PrimerPairList.cpp  PrimerPairList.h  Sequence.cpp  Sequence.h  SequenceList.cpp  SequenceList.h  SequenceReader.cpp  SequenceReader.h  SettingsReader.cpp  SettingsReader.h  config.h.in  datanode.cpp  datanode.h  datasequence.cpp  datasequence.h  degenprime  degenprime.cpp  format.cpp  format.h  frontend-fix.py  frontend.py  global.h  globalsettings.cpp  globalsettings.h  (+15 more)
(+14 files in other folders)
