cmake_minimum_required(VERSION 3.11)
project(DeGenPrime)
add_executable(degenprime datanode.cpp  datasequence.cpp  degenprime.cpp  format.cpp  globalsettings.cpp  primercalculator.cpp  primer.cpp  primerpair.cpp  primerpairlist.cpp  sequence.cpp  sequencelist.cpp  sequencereader.cpp)
set_property(TARGET degenprime PROPERTY CXX_STANDARD 17)
set_property(TARGET degenprime PROPERTY CXX_STANDARD_REQUIRED true)
# link against stdc++fs when compiling with old gcc versions (less than 9)
target_link_libraries(degenprime $<$<AND:$<CXX_COMPILER_ID:GNU>,$<VERSION_LESS:$<CXX_COMPILER_VERSION>,9.0>>:-lstdc++fs>)
install(TARGETS degenprime DESTINATION bin)